; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/printing/base/spoolsv/extr_printerdata.c__RpcSetPrinterData.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/printing/base/spoolsv/extr_printerdata.c__RpcSetPrinterData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i32] [i32 80, i32 114, i32 105, i32 110, i32 116, i32 101, i32 114, i32 68, i32 114, i32 105, i32 118, i32 101, i32 114, i32 68, i32 97, i32 116, i32 97, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_RpcSetPrinterData(i32 %0, i32* %1, i32 %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32*, i32** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i32*, i32** %9, align 8
  %15 = load i32, i32* %10, align 4
  %16 = call i32 @_RpcSetPrinterDataEx(i32 %11, i8* bitcast ([18 x i32]* @.str to i8*), i32* %12, i32 %13, i32* %14, i32 %15)
  ret i32 %16
}

declare dso_local i32 @_RpcSetPrinterDataEx(i32, i8*, i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
